--- a/index_full.html
+++ b/index_full.html
@@ -304,7 +304,7 @@
 	
 	<div class="side_panel">
 
-		<div class="side_panel_row side_panel_row">
+		<div class="side_panel_row">
 			<div class='button_group above_scrollable_area' id='tet_list'>
 				<div class='tetrode_title'>tetrode:</div>
 			</div>
@@ -315,7 +315,7 @@
 		
 		<iron-splitter direction="up"></iron-splitter>
 
-		<div class="side_panel_row">
+		<div class="side_panel_row side_panel_row_flex">
 			<div class="grabbable side_panel_row_flex" id="spatial_panel">
 				<canvas id="posplot" class='poslayer' width="200" height="200"></canvas> 
 				<canvas id="posoverlay" class='poslayer' width="200" height="200"></canvas> 
@@ -328,7 +328,7 @@
 			</div>
 		</div>
 
-		<iron-splitter direction="up"></iron-splitter>
+		<iron-splitter direction="down"></iron-splitter>
 		
 		<div class="side_panel_row">
 			<div id="cluster_info" class="cluster_info above_scrollable_area">
