--- a/tile-element.html
+++ b/tile-element.html
@@ -160,18 +160,15 @@ is in null state. When another tile is moving, it cannot be active instead it is
 	</style>
 	<div class="canvas_part_1">
 		<canvas width='0' height='0' style='width:0px;height:128px;'></canvas> 
-		<canvas width='0' height='0' style='width:0px;height:128px;'></canvas>
+		<managed-canvas canv_id="[[waves]]"></managed-canvas>
+		<managed-canvas canv_id="[[spa_rm]]"></managed-canvas>
 	</div>
 	<div class="canvas_part_2">
-		<managed-canvas canv_id="[[dir_rm]]"></managed-canvas>
-		<managed-canvas canv_id="[[spa_rm]]"></managed-canvas>
 		<div>
-			<canvas class='dir-rm' width='0' height='0' style='width:0px'></canvas>
-			<canvas class='speed-rm' width='0' height='0' style='width:0px'></canvas>
+			<managed-canvas canv_id="[[dir_rm]]"></managed-canvas>
+			<managed-canvas canv_id="[[speed_rm]]"></managed-canvas>
 		</div>
-		<div>
-			<canvas class='tc' width='0' height='0' style='width:0px;'></canvas>
-		</div>
+		<managed-canvas canv_id="[[tc]]"></managed-canvas>
 	</div>
 	<div id='sticker' class='tile-sticker' style$="background-color:[[group_color_1]];color:[[group_color_2]];">[[group_num]]</div>
 	<div id='over' class='tile-over hidden_grabbed'>
@@ -282,6 +279,18 @@ is in null state. When another tile is moving, it cannot be active instead it is
 				value: ""
 			},
 			spa_rm: {
+				type: String, //canvas-manger id
+				value: ""
+			},
+			speed_rm: {
+				type: String, //canvas-manger id
+				value: ""
+			},
+			waves: {
+				type: String, //canvas-manger id
+				value: ""
+			},
+			tc: {
 				type: String, //canvas-manger id
 				value: ""
 			},
