--- a/tile-wall.html
+++ b/tile-wall.html
@@ -18,21 +18,25 @@ groups is an array of objects with the following properties:
 <link rel="import" href="bower_components/polymer/polymer.html">
 <link rel="import" href="canvas-manager.html">
 <link rel="import" href="tile-element.html">
+<link rel="import" href="rm-plots.html">
 
 <dom-module id="tile-wall">
 
 <template>
 	<canvas-manager></canvas-manager> 
+	<rm-plots groups="{{groups}}"></rm-plots> 
 	<template is="dom-repeat" items="[[groups]]">
 		<tile-element 
 			group_num="[[item.group_num]]"
 			group_n="[[item.n_spikes]]"
+			group_spa_max="[[item.spa_max]]"
 			dir_rm="[[item.dir_rm]]"
 			spa_rm="[[item.spa_rm]]"
+			speed_rm="[[item.speed_rm]]"
+			tc="[[item.tc]]"
+			waves="[[item.waves]]"
 			></tile-element>		
 	</template>
-	<managed-canvas></managed-canvas>
-	<managed-canvas></managed-canvas>
 
 </template>
 
@@ -44,10 +48,17 @@ groups is an array of objects with the following properties:
     	properties: {
     		groups: {
     			type: Array,
-    			value: function(){return [];}	
+    			value: function(){return [];},
+    			notify: true	
     		}
     	},
-    	observers: []
+    	observers: [
+    		'groups_modified(groups.splices)'
+    	],
+    	groups_modified: function(change){
+    		console.log("tile-wall detected groups change")
+    		console.log(JSON.stringify(change));
+    	}
 	});
 </script>
 
