--- a/tile-element.html
+++ b/tile-element.html
@@ -168,7 +168,7 @@ is in null state. When another tile is moving, it cannot be active instead it is
 			<managed-canvas canv_id="[[dir_rm]]"></managed-canvas>
 			<managed-canvas canv_id="[[speed_rm]]"></managed-canvas>
 		</div>
-		<managed-canvas canv_id="[[tc]]"></managed-canvas>
+		<managed-canvas canv_id="[[tac]]"></managed-canvas>
 	</div>
 	<div id='sticker' class='tile-sticker' style$="background-color:[[group_color_1]];color:[[group_color_2]];">[[group_num]]</div>
 	<div id='over' class='tile-over hidden_grabbed'>
@@ -290,7 +290,7 @@ is in null state. When another tile is moving, it cannot be active instead it is
 				type: String, //canvas-manger id
 				value: ""
 			},
-			tc: {
+			tac: {
 				type: String, //canvas-manger id
 				value: ""
 			},
