--- a/tile-wall.html
+++ b/tile-wall.html
@@ -4,12 +4,13 @@ BY: DM
 
 groups is an array of objects with the following properties:
  .group_num
+ .inds - id for use with typed-array-manager
  .group_n
  .canv_spa_rm - id for use with canvas-manager
  .spa_rm_bin_size
  .spa_rm_smoothing
- .canv_dir_rm
- etc.
+ .canv_dir_rm - id for use with canvas-manager
+ and more...
 
 
 -->
@@ -19,12 +20,39 @@ groups is an array of objects with the following properties:
 <link rel="import" href="canvas-manager.html">
 <link rel="import" href="tile-element.html">
 <link rel="import" href="rm-plots.html">
+<link rel="import" href="tac-plots.html">
+<link rel="import" href="wave-plots.html">
+
 
 <dom-module id="tile-wall">
 
 <template>
+
+	<!--
+	Canvases can not directly be "bound" using Polymer, so
+	instead we bind ids that have a specific meaning within
+	canvas-manager.  A canvas is then rendered using:
+	<managed-canvas canv_id="????"></managed-canvas>
+	where "????" is an id produced by the canvas-manager.
+	Note that canavas-manager is a singleton, avaialble at
+	window.canvas_manager.
+	-->
 	<canvas-manager></canvas-manager> 
+
+	<!--
+	The following elements listen for changes in the groups array.
+	When they decide to produce a new plot they render it to a canvas
+	using canvas-manager, and then supply the canvas_id back into
+	the groups array, e.g. groups[3].dir_rm will be a canvas_id for
+	use with managed-canvas elements.
+	As well as setting canvases in the groups array, they also record
+	the settings used to produce that canvas, e.g. groups[3].dir_smoothing.
+	 -->
 	<rm-plots groups="{{groups}}"></rm-plots> 
+	<tac-plots groups="{{groups}}"></tac-plots> 
+	<wave-plots groups="{{groups}}"></wave-plots> 
+	
+
 	<template is="dom-repeat" items="[[groups]]">
 		<tile-element 
 			group_num="[[item.group_num]]"
@@ -33,7 +61,7 @@ groups is an array of objects with the following properties:
 			dir_rm="[[item.dir_rm]]"
 			spa_rm="[[item.spa_rm]]"
 			speed_rm="[[item.speed_rm]]"
-			tc="[[item.tc]]"
+			tac="[[item.tac]]"
 			waves="[[item.waves]]"
 			></tile-element>		
 	</template>
