--- a/parsed-data.html
+++ b/parsed-data.html
@@ -18,6 +18,18 @@ BY: DM
     Polymer({
     	is:'parsed-data',
     	properties: {
+            use_n_leds: {
+                type: Number, //1 or 2
+                value: 2
+            },
+            speed_filter_mps: {
+                type: Number,  //mps= meters per second
+                value: 4
+            },
+            pos_smoothing_s: {
+                type: Number, 
+                value: 0.2
+            },
             duration: {
                 type: Number, // seconds
                 value: 0,
@@ -49,6 +61,16 @@ BY: DM
                 notify: true
             },
             pos_dir: {
+                type: String,
+                value: "", // typed-array-manager id
+                notify: true
+            },
+            want_pos_speed: {
+                type: Boolean,
+                value: true,
+                notify: true
+            },
+            pos_speed: {
                 type: String,
                 value: "", // typed-array-manager id
                 notify: true
