--- a/tile-wall.html
+++ b/tile-wall.html
@@ -70,7 +70,7 @@ groups is an array of objects with the following properties:
 
 	<template is="dom-repeat" items="[[groups]]">
 		<tile-element 
-			group_num="[[item.group_num]]"
+			group_num="[[index]]"
 			group_n="[[item.n_spikes]]"
 			group_spa_max="[[item.spa_max]]"
 			dir_rm="[[item.dir_rm]]"
